--- a/assignments/assignments.html
+++ b/assignments/assignments.html
@@ -15,28 +15,7 @@
 		<p>
 			Hana Jacobsen's Creative Computing website.
 		</p>
+		<p><a href="week4_adventure_game/intro.html"> Week 4: Adventure Game</a> </p>
 		</center>
-		<ul>
-			<section>
-			<li>
-				<h4>
-					Links
-				</h4>
-			<ul>
-				<section2>
-				<li>
-					<h4>
-						<a href="readings/readings.html">Readings </a>
-					</h4>
-				</section2>
-				<section3>
-				<li>
-					<h4>
-						<a href="assignments/assignments.html">Assignments </a>
-					</h4>
-				</section3>
-			</ul>
-			<section>
-		</ul>
 	</body>
 </html>
