--- a/assignments/week4_adventure_game/choice_hw/keepgoing/do_hw.html
+++ b/assignments/week4_adventure_game/choice_hw/keepgoing/do_hw.html
@@ -12,7 +12,7 @@
 	<section>
 		<ul>
 			<li>
-			<a href="Finish/happy.html"> Go to bed. Get that sweet three hours of sleep. </a>
+			<a href="finish/happy.html"> Go to bed. Get that sweet three hours of sleep. </a>
 			<ul>
 	</section>
 	</body>
