--- a/classwebsite/readings/readings.html
+++ b/classwebsite/readings/readings.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Creative Computing. Hana Jacobsen</title>
-	<link href="index_style.css" rel="stylesheet"/>
+	<link href="../index_style.css" rel="stylesheet"/>
 	</head>
 		<center>
 		<h1 style="border:7px; border-style:solid; border-color:‎#CCCCFF; padding: 1em;">
@@ -15,8 +15,8 @@
 		<p>
 			Readings
 		</p>
-		<p>
-		<a href="week4/4reading.html"> Week 4</a> </p>
+		<p> <a href="week4/4reading.html"> Week 4</a> </p>
+		<p> <a href="week6/6reading.html"> Week 6</a> </p>
 		</center>
 	</body>
 </html>
