--- a/classwebsite/assignments/week5/gradient1.html
+++ b/classwebsite/assignments/week5/gradient1.html
@@ -3,9 +3,14 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Creative Computing. Hana Jacobsen</title>
-	<link href="grandient_style.css" rel="stylesheet"/>
+	<link href="gradients_style.css" rel="stylesheet"/>
 	</head>
 	<body >
-		
+		<p><p1>P</p1>URPLE</p>
+		<p><p2>PU</p2>RPLE</p>
+		<p><p3>PUR</p3>PLE</p>		
+		<p><p4>PURP</p4>LE</p>
+		<p><p5>PURPL</p5>E</p>
+		<p><p6>PURPLE</p6></p>		
 	</body>
 </html>
