--- a/classwebsite/assignments/week5/gradient10.html
+++ b/classwebsite/assignments/week5/gradient10.html
@@ -3,9 +3,14 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Creative Computing. Hana Jacobsen</title>
-	<link href="grandient_style.css" rel="stylesheet"/>
+	<link href="gradients_style.css" rel="stylesheet"/>
 	</head>
 	<body >
-		
+	<div class= "houses">
+		<p class= "gryff"> gryffindor </p>
+		<p class= "huff"> hufflepuff </p>
+		<p class= "slyth"> slytherin </p>
+		<p class= "rave"> ravenclaw </p>
+	</div> 
 	</body>
 </html>
