--- a/classwebsite/assignments/week5/gradient2.html
+++ b/classwebsite/assignments/week5/gradient2.html
@@ -3,9 +3,18 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Creative Computing. Hana Jacobsen</title>
-	<link href="grandient_style.css" rel="stylesheet"/>
+	<link href="gradients_style.css" rel="stylesheet"/>
 	</head>
 	<body >
-		
+	<section1>
+		<p7>Obtuse,</p7> 
+		<p8>rubber goose,</p8> 
+		<p9>green moose,</p9> 
+		<p10>guava juice.</p10>
+		<p11>Giant snake,</p11> 
+		<p12>birthday cake,</p12> 
+		<p13>large fries, </p13>
+		<p14>chocolate shake!</p14>
+	</section1>
 	</body>
 </html>
