--- a/classwebsite/assignments/week5/gradient4.html
+++ b/classwebsite/assignments/week5/gradient4.html
@@ -3,9 +3,14 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Creative Computing. Hana Jacobsen</title>
-	<link href="grandient_style.css" rel="stylesheet"/>
+	<link href="gradients_style.css" rel="stylesheet"/>
 	</head>
 	<body >
-		
+		<div class = "rihannas">
+		<p class = "riri">RiRi</p>
+		<p class = "rihanna">Rihanna</p>
+		<p class = "badgal">Bad Gal RiRi</p>
+		<p class = "fenty">Fenty</p>
+		</div>
 	</body>
 </html>
