--- a/classwebsite/assignments/week5/gradient6.html
+++ b/classwebsite/assignments/week5/gradient6.html
@@ -3,9 +3,15 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Creative Computing. Hana Jacobsen</title>
-	<link href="grandient_style.css" rel="stylesheet"/>
+	<link href="gradients_style.css" rel="stylesheet"/>
 	</head>
 	<body >
-		
+
+			<p><p31>Taylor</p31></p>
+			<p><p32>Swift</p32></p>
+			<p><p33>VS</p33></p>
+			<p><p34>Kanye</p34></p>
+			<p><p35>West</p35></p>
+
 	</body>
 </html>
