--- a/classwebsite/assignments/week5/gradient3.html
+++ b/classwebsite/assignments/week5/gradient3.html
@@ -3,9 +3,14 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Creative Computing. Hana Jacobsen</title>
-	<link href="grandient_style.css" rel="stylesheet"/>
+	<link href="gradients_style.css" rel="stylesheet"/>
 	</head>
 	<body >
-		
+		<div class = "tlc">
+			<p class = "dont">dont</p>
+			<p class = "go">go</p>
+			<p class = "chasing">chasing </p>
+			<p class = "waterfalls"> waterfalls</p>
+		</div>
 	</body>
 </html>
