--- a/classwebsite/assignments/week5/gradient5.html
+++ b/classwebsite/assignments/week5/gradient5.html
@@ -3,9 +3,14 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Creative Computing. Hana Jacobsen</title>
-	<link href="grandient_style.css" rel="stylesheet"/>
+	<link href="gradients_style.css" rel="stylesheet"/>
 	</head>
 	<body >
-		
+		<div class ="crazy">
+			<p><p27>THESE</p27></p>
+			<p><p28>PEOPLE</p28></p>
+			<p><p29>ARE</p29></p>
+			<p><p30>CRAZY</p30></p>
+		</div>
 	</body>
 </html>
