--- a/classwebsite/assignments/week5/gradient7.html
+++ b/classwebsite/assignments/week5/gradient7.html
@@ -3,9 +3,14 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Creative Computing. Hana Jacobsen</title>
-	<link href="grandient_style.css" rel="stylesheet"/>
+	<link href="gradients_style.css" rel="stylesheet"/>
 	</head>
 	<body >
-		
+	<section2>
+		<p23>where</p23>
+		<p24>did</p24>
+		<p25>I</p25>
+		<p26>go?</p26>
+	</section2>
 	</body>
 </html>
