--- a/classwebsite/assignments/week5/gradient8.html
+++ b/classwebsite/assignments/week5/gradient8.html
@@ -3,9 +3,11 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Creative Computing. Hana Jacobsen</title>
-	<link href="grandient_style.css" rel="stylesheet"/>
+	<link href="gradients_style.css" rel="stylesheet"/>
 	</head>
 	<body >
-		
+			<p><p15>I</p15></p>
+			<p><p16>am</p16></p>
+			<p><p17>protected</p17></p>
 	</body>
 </html>
