--- a/classwebsite/assignments/week5/gradient9.html
+++ b/classwebsite/assignments/week5/gradient9.html
@@ -3,9 +3,15 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Creative Computing. Hana Jacobsen</title>
-	<link href="grandient_style.css" rel="stylesheet"/>
+	<link href="gradients_style.css" rel="stylesheet"/>
 	</head>
 	<body >
-		
+	<section1>
+		<p18><p>slow</p></p18>
+		<p19><p>down</p></p19>
+		<p20><p>your</p></p20>
+		<p21><p>energy</p></p21>
+		<p22><p>please</p></p22>
+	</section1>
 	</body>
 </html>
