--- a/classwebsite/readings/readings.html
+++ b/classwebsite/readings/readings.html
@@ -15,6 +15,7 @@
 		<p>
 			Readings
 		</p>
+		<p> <a href="week3/3reading.html"> Week 3</a> </p>
 		<p> <a href="week4/4reading.html"> Week 4</a> </p>
 		<p> <a href="week6/6reading.html"> Week 6</a> </p>
 		</center>
