--- a/classwebsite/readings/week3/3reading.html
+++ b/classwebsite/readings/week3/3reading.html
@@ -3,27 +3,28 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Creative Computing. Hana Jacobsen</title>
+	<link href="../../index_style.css" rel="stylesheet"/>
 	</head>
 	<body >
 		<h1> Assignment 2: Reading Response </h1>
-		<p>
+		<br><p1>
 			In a 1998 interview conducted by MIT involving Octavia Butler and Samuel Delany, the value and future of literacy, the future of equality, and the future of the internet was discussed. Thoughts on such topics varied from negative to positive, pessimistic and optimistic.
-		</p>
-		<p>
+		</p1></br>
+		<br><p1>
 			There are many disadvantages of developing communication methods for limited audiences. Firstly, it is not fair for one person to have access to certain information and others not. That is likely to lead to abuse of power and the spread of misinformation. I think that the fact that slaves were not allowed to learn how to read and write was a large way of mass control of information and a way to limit power to a large group of people without using great force. Not allowing a group of people to read and write is very passive but effective in theory to keep them from starting an up rise. Fortunately, some slaves found a way to illegally learn how to read and write which gave them more power and had a great impact on future generations that exist today and the jobs they can have and their overall social standing. Even though racism still exists, racism against black people would very likely be horrific in a whole other way if the U.S. government was successful in stopping enslaved people from becoming literate. 
-		</p>
-		<p>
+		</p1></br>
+		<br><p1>
 			Even though literacy is something that is important and gives everyone the power and freedom to receive and evaluate information for themselves, there is something so welcoming and universal about visual design as a form of communication. Yes, literacy allows you to access and understand information that might be distributed from groups of great power—the government, for example—but the fact that I, a pretty literate college student, still has a hard time reading and understanding some government documents or papers distributed by businesses is kind of upsetting. Even if you can read some English is just hard and, in this sense, relying on literacy is limited because not everyone knows all the business or government jargon. This is why visual communication is important and necessary for spreading this more “difficult” information more evenly. People would be able to access this information from a younger age or from varying reading levels. It is unlikely though that governments and businesses would put in the time and money to hire graphic designers to visualize their most difficult information because it would cost them more money they don’t want to spend, and perhaps they don’t want some of their information to be completely coherent to the general public. I remember someone making a robot with an algorithm that took in thousands of business documents and created its own business document to mimic the style of existing documents. The result was pure nonsense but many people could not tell that it was just nonsense when reading it amongst business documents that were actually real. 
-		</p>
-		<p>
+		</p1></br>
+		<br><p1>
 			As a so-called “digital native,” I’ve seen a great shift in the value of literacy online. It’s not so much the amount that people can read that’s shifted, its more about people’s attention spans. In the age of tweets and Vines, young people in general have a harder time sitting down and concentrating on a large piece of text. I think it’s great that twitter increased its word limit a few years ago, being that a lot of government officials and news outlets use twitter now, but seven-second-long videos and small paragraph of information has created a new standard of how much we want to read on the internet. In some ways this change is terrible. People are relying too much on vague and simplified bit of information on twitter that they might not go and look into an issue on their own. This leads to people regurgitating oversimplified opinions about very complicated issues and it probably makes that person dumber and less of a critical thinker. I personally think this is exactly what a large part of the government wants because a massive group of dumb, non-critical thinkers can’t do much to enact change because they are too busy fighting with each other for having differing opinions. I do think that fundamental rights and wrongs exist, but most conclusions for any argument about any issue lie in a gray zone. In order to discuss these issues in a less polarizing way, people need to take the responsibility to do their own research and not just rely on tweets.
-		</p>
-		<p>
+		</p1></br>
+		<br><p1>
 			In this sense, I truly disagree with Delany’s criticism towards hypertext when applied to where the modern Web is at now. Not having even very simple hypertext that might just lead to a definition of a word is only limiting. I think people also do a lot of their own “hypertexting” by looking up topics that they do not fully understand. The internet is so expansive now that information seems limitless. Hypertext is only limiting however if one does not know the difference between unreliable and reliable information. How to distinguish between those two types of information should definitely be taught in schools. I also think hypertext exists everywhere even during a conversation when you pause a discussion to ask what a certain word means. Saying that this concept is limiting is just untrue.
-		</p>
-		<p>
+		</p1><br>
+		<br><p1>
 			I think a lot of the predictions made 11 years ago in this discussion are somewhat true. The most successful games are almost completely visual, with text being used just as décor. But I don’t think this is a bad thing because humans are inherently visual creatures. Before there were words, prehistoric people used pictographic symbols to communicate, and in some ways words in every language are still just pictures. People give meaning to these intersecting lines and shapes we call words. The words themselves are purely visual and have no information ingrained in them by default. That is why I think it’s silly to be so against and afraid of visual communication because that is a new language in itself and a more inclusive one at that. 
-		</p>
+		</p1></br>
 		
 	</body>
 </html>
