--- a/classwebsite/readings/week4/4reading.html
+++ b/classwebsite/readings/week4/4reading.html
@@ -3,12 +3,27 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Creative Computing. Hana Jacobsen</title>
+	<link href="../../index_style.css" rel="stylesheet"/>
 	</head>
 	<body >
 		<h1> Week 4: Reading Response </h1>
-		<p>How long does it take to get to the level of not having to use a cheat sheet at all?</p>
-		<p>what is Flexbox?</p>
-		<p>Is Layout a program in itself or something within CSS?</p>
-		
+		<p1>
+		<br>THINGS I LEARNED:</br>
+
+			<br>1. You can use pseudo-class selectors to make more specific selections within a class without having to create another class in the html file.</br>
+
+			<br>2. If some CSS isn't applying to an element you are trying to select, see if there is a more specific selection that is being made in the CSS. The more specific selection will overrule the more general one.</br>
+
+			<br>3. You can see what kind of box model is being used by looking at the DevTools in your browser.</br>
+
+			<br>4. "Normal Flow" is already built into HTML. By default, this layout prevents things from overlapping because the content is aware of each other. Using the right HTML tags will allow you to make the most use of this built-in "Normal Flow."</br>
+
+			<br>5. You can animate on HTML, however you can do even more with animation if you involve JavaScript, SVG, or Web Animation API.</br>
+
+		<br>QUESTION:</br>
+		<br>1. How long does it take to get to the level of not having to use a cheat sheet at all?</br>
+		<br>2. what is Flexbox?</br>
+		<br>3. Is Layout a program in itself or something within CSS?</br>
+		</p1>
 	</body>
 </html>
