--- a/classwebsite/final website/poem5.html
+++ b/classwebsite/final website/poem5.html
@@ -51,7 +51,12 @@
 		<p>And open unseen gates with key of gold?</p>
 		</div>
 
-		<div class="artwork"><img src="aya5.jpg" alt="aya5"></div>
+		<a href="https://www.instagram.com/takano.aya/?hl=en"target="_blank"><div class="artwork"><img src="aya5.jpg" alt="aya5"><p1> Artwork by Aya Takano</p1></div></a>
+
+		<div class="lofi"><audio loop="loop" autoplay="autoplay" controls="controls">
+  		<source src="jinsang.mp3" type="audio/mpeg">
+		</audio> </div>
+
 
 
 	<body>
