--- a/classwebsite/final website/poem7.html
+++ b/classwebsite/final website/poem7.html
@@ -30,7 +30,11 @@
 			<p>I know what sound is there.
 		</div>
 
-		<div class="artwork"><img src="aya7.jpg" alt="aya7"></div>
+		<a href="https://www.instagram.com/takano.aya/?hl=en"target="_blank"><div class="artwork"><img src="aya7.jpg" alt="aya7"><p1> Artwork by Aya Takano</p1></div></a>
+
+		<div class="lofi"><audio loop="loop" autoplay="autoplay" controls="controls">
+  		<source src="jinsang.mp3" type="audio/mpeg">
+		</audio> </div>
 
 
 	<body>
