--- a/classwebsite/final website/poem1.html
+++ b/classwebsite/final website/poem1.html
@@ -41,8 +41,10 @@
 
 		</div>
 
-		<div class="art">
-		<div class="artwork"><img src="aya1.jpg" alt="aya1"></div>
-		</div>
+		<a href="https://www.instagram.com/takano.aya/?hl=en"target="_blank"><div class="artwork"><img src="aya1.jpg" alt="aya1"><p1> Artwork by Aya Takano</p1></div></a>
+
+		<div class="lofi"><audio loop="loop" autoplay="autoplay" controls="controls">
+  		<source src="jinsang.mp3" type="audio/mpeg">
+		</audio> </div>
 
 	<body>
