--- a/classwebsite/final website/poem2.html
+++ b/classwebsite/final website/poem2.html
@@ -79,7 +79,11 @@
 			<p>the noisy streets</p>
 		</div>
 
-		<div class="artwork"><img src="aya1.jpg" alt="aya1"></div>
+		<a href="https://www.instagram.com/takano.aya/?hl=en"target="_blank"><div class="artwork"><img src="aya2.jpg" alt="aya2"><p1> Artwork by Aya Takano</p1></div></a>
+
+		<div class="lofi"><audio loop="loop" autoplay="autoplay" controls="controls">
+  		<source src="jinsang.mp3" type="audio/mpeg">
+		</audio> </div>
 
 
 	<body>
