--- a/classwebsite/final website/poem3.html
+++ b/classwebsite/final website/poem3.html
@@ -48,7 +48,11 @@
 			<p>Back from the City of Sleep!</p>
 		</div>
 
-		<div class="artwork"><img src="aya3.jpg" alt="aya3"></div>
+		<a href="https://www.instagram.com/takano.aya/?hl=en"target="_blank"><div class="artwork"><img src="aya3.jpg" alt="aya3"><p1> Artwork by Aya Takano</p1></div></a>
+
+		<div class="lofi"><audio loop="loop" autoplay="autoplay" controls="controls">
+  		<source src="jinsang.mp3" type="audio/mpeg">
+		</audio> </div>
 
 
 	<body>
