--- a/classwebsite/final website/poem4.html
+++ b/classwebsite/final website/poem4.html
@@ -20,7 +20,12 @@
 			<p>Your dreams will come true</p>
 		</div>
 
-		<div class="artwork"><img src="aya4.jpg" alt="aya4"></div>
+		<a href="https://www.instagram.com/takano.aya/?hl=en"target="_blank"><div class="artwork"><img src="aya4.jpg" alt="aya4"><p1> Artwork by Aya Takano</p1></div></a>
+
+		<div class="lofi"><audio loop="loop" autoplay="autoplay" controls="controls">
+  		<source src="jinsang.mp3" type="audio/mpeg">
+		</audio> </div>
+
 
 
 	<body>
