--- a/classwebsite/final website/poem6.html
+++ b/classwebsite/final website/poem6.html
@@ -30,7 +30,12 @@
 			<p>That falls through the clear ether silently.</p>
 		</div>
 
-		<div class="artwork"><img src="aya6.jpg" alt="aya6"></div>
+		<a href="https://www.instagram.com/takano.aya/?hl=en"target="_blank"><div class="artwork"><img src="aya6.jpg" alt="aya6"><p1> Artwork by Aya Takano</p1></div></a>
+
+		<div class="lofi"><audio loop="loop" autoplay="autoplay" controls="controls">
+  		<source src="jinsang.mp3" type="audio/mpeg">
+		</audio> </div>
+
 
 
 	<body>
