--- a/classwebsite/final website/poem8.html
+++ b/classwebsite/final website/poem8.html
@@ -21,7 +21,10 @@
 			<p>Roll’d again back on itself in the tides of a </p><p>civic insanity!</p>
 		</div>
 
-		<div class="artwork"><img src="aya8.jpg" alt="aya8"></div>
+		<a href="https://www.instagram.com/takano.aya/?hl=en"target="_blank"><div class="artwork"><img src="aya8.jpg" alt="aya8"><p1> Artwork by Aya Takano</p1></div></a>
 
+		<div class="lofi"><audio loop="loop" autoplay="autoplay" controls="controls">
+  		<source src="jinsang.mp3" type="audio/mpeg">
+		</audio> </div>
 
 	<body>
