--- a/classwebsite/final website/poem9.html
+++ b/classwebsite/final website/poem9.html
@@ -70,7 +70,12 @@
 			<p>With free long looking, ere I die.</p>
 		</div>
 
-		<div class="artwork"><img src="aya9.jpg" alt="aya9"></div>
+		<a href="https://www.instagram.com/takano.aya/?hl=en"target="_blank"><div class="artwork"><img src="aya9.jpg" alt="aya9"><p1> Artwork by Aya Takano</p1></div></a>
+
+		<div class="lofi"><audio loop="loop" autoplay="autoplay" controls="controls">
+  		<source src="jinsang.mp3" type="audio/mpeg">
+		</audio> </div>
+
 
 
 	<body>
