--- a/classwebsite/final website/selection.html
+++ b/classwebsite/final website/selection.html
@@ -4,10 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Poems n' Art</title>
 	<link href="stylesheet.css" rel="stylesheet"/>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" ></script>
 	<script src="script.js"></script>
+
 	</head>
 	<body>
+			
 
 
 			<h2> Please Pick an Image: </h2>
@@ -53,5 +55,8 @@
 			</div>
 
 
+		<div class="lofi"><audio loop="loop" autoplay="autoplay" controls="controls">
+  		<source src="jinsang.mp3" type="audio/mpeg">
+		</audio> </div>
 
 	</body>
