--- a/classwebsite/assignments/assignments.html
+++ b/classwebsite/assignments/assignments.html
@@ -21,7 +21,8 @@
 		<p><a href="week4_adventure_game/intro.html"> Week 4: Adventure Game</a> </p>
 		<p><a href="week5/gradients.html"> Week 5: gradients</a> </p>
 		<p><a href="week6/collage.html"> Week 6: collage</a> </p>
-		<p><a href="week8/animation.html"> Week 6: animation</a> </p>
+		<p><a href="week8/animation.html"> Week 8: animation</a> </p>
+		<p><a href="week9/index.html"> Week 9: ecosystem</a> </p>
 		</center>
 	</body>
 </html>
